Tile Maze LFA dark mode fix

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -3795,6 +3795,11 @@ path.city-planning {
 		.dark-mode svg.tip-toe-grid circle.dot.filled {
 			fill: #ddd;
 		}
+/* Tile Maze */
+	table.tile-maze {
+		border-collapse: collapse;
+		color: black;
+	}
 /* Toe Tactics */
 	svg.toe-tactics {
 		display: block;
